core/tests/ui/invalid_dup.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui/invalid_dup.rs:3:44
  |
3 |   const _INVALID_DUP: ImplPolylineConst<2> = ImplPolylineConst::from_array([
  |  ____________________________________________^
4 | |     (0.0, 1.0),
5 | |     (0.0, 2.0),
6 | | ]);
  | |__^ evaluation panicked: DuplicateTime: Duplicate time value in polyline
  |
note: inside `ImplPolylineConst::<2>::from_array`
 --> src/time_temperature_curve/impl_polyline_const.rs
  |
  |                 panic!("DuplicateTime: Duplicate time value in polyline");
  |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
